--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -63,9 +63,24 @@ sim-time-limit = 6000s
 #                                                        #
 #                                                        #
 ##########################################################
-*.rsu[0].mobility.x = 2000
-*.rsu[0].mobility.y = 2000
+*.rsu[0].mobility.x = 1040.28
+*.rsu[0].mobility.y = 600.88
 *.rsu[0].mobility.z = 3
+*.rsu[1].mobility.x = 891.30
+*.rsu[1].mobility.y = 1052.56
+*.rsu[1].mobility.z = 3
+*.rsu[2].mobility.x = 1236.69
+*.rsu[2].mobility.y = 715.13
+*.rsu[2].mobility.z = 3
+*.rsu[3].mobility.x = 765.48
+*.rsu[3].mobility.y = 915.97
+*.rsu[3].mobility.z = 3
+*.rsu[4].mobility.x = 1380.53
+*.rsu[4].mobility.y = 575.58
+*.rsu[4].mobility.z = 3
+*.rsu[5].mobility.x = 1066.73
+*.rsu[5].mobility.y = 826.51
+*.rsu[5].mobility.z = 3
 *.rsu[*].applType = "TraCIDemoRSU11p"
 *.rsu[*].appl.debug = false
 *.rsu[*].appl.headerLength = 256 bit
